--- a/index.html
+++ b/index.html
@@ -1,15 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="./assets/favicon-plants.svg">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inika:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/normalize.css">
   <link rel="stylesheet" href="./css/style.css">
   <title>Plants</title>
 </head>
+
 <body>
-  
+  <header class="header">
+    <div class="container">
+      <div class="header__inner">
+        <a class="header-logo" href="#">
+          <img class="header-logo__img" src="./assets/logo.svg" alt="plants-logo">
+          Plants
+        </a>
+        <nav class="menu">
+          <ul class="menu__list">
+            <li class="menu__item menu__item_active">
+              Home
+            </li>
+            <li class="menu__item">
+              About us
+            </li>
+            <li class="menu__item">
+              Service
+            </li>
+            <li class="menu__item">
+              Price
+            </li>
+            <li class="menu__item">
+              Contacts
+            </li>
+          </ul>
+        </nav>
+      </div>
+      <div class="welcome">
+        <img class="welcome__img" src="./assets/leafs.png" alt="leafs">
+        <div class="welcome-content">
+          <h1 class="welcome-content__title">
+            We grow
+            <span class="welcome-content__title_color_green">plants</span>
+            and give you oxygen
+          </h1>
+          <p class="welcome-content__text">
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+            industry's standard dummy text ever since the 1500s.
+          </p>
+          <button class="welcome-content__btn">
+            LEARN MORE
+          </button>
+        </div>
+      </div>
+    </div>
+  </header>
+
   <script src="./script.js">  </script>
 </body>
+
 </html>
