--- a/index.html
+++ b/index.html
@@ -65,6 +65,28 @@
     </div>
   </header>
 
+  <section class="about">
+    <div class="container">
+      <div class="about-inner">
+        <div class="about-text">
+          <h3 class="about-text__title">
+            We are <span class="about-text__title_color_orange">professional experienced</span> gardeners
+          </h3>
+          <p class="about-text__description">
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+            industry's
+            standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
+            make a type specimen book. It has survived not only five centuries, but also the leap into electronic
+            typesetting, remaining essentially unchanged.
+          </p>
+        </div>
+        <div class="about-photo">
+          <img class="about-photo__img" src="./assets/about-img.png" alt="plant">
+        </div>
+      </div>
+    </div>
+  </section>
+
   <script src="./script.js">  </script>
 </body>
 
