feat: add section service

--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
             industry's standard dummy text ever since the 1500s.
           </p>
-          <button class="welcome-content__btn">
+          <a class="welcome-content__more" href="#">
             LEARN MORE
-          </button>
+          </a>
         </div>
       </div>
     </div>
@@ -82,6 +82,53 @@
         </div>
         <div class="about-photo">
           <img class="about-photo__img" src="./assets/about-img.png" alt="plant">
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="service">
+    <div class="container">
+      <div class="service-header">
+        <h3 class="service__title">
+          Service and our projects
+        </h3>
+        <div class="service-filter">
+          <button class="service-filter__btn">Gardens</button>
+          <button class="service-filter__btn">Lawn</button>
+          <button class="service-filter__btn">Planting</button>
+        </div>
+      </div>
+      <div class="service-body">
+        <div class="service-card">
+          <img class="service-card__img" src="./assets/service-card-1.png" alt="service picture">
+          <h4 class="service-card__title">Garden care</h4>
+          <p class="service-card__description">Lorem Ipsum has been the industry</p>
+        </div>
+        <div class="service-card">
+          <img class="service-card__img" src="./assets/service-card-2.png" alt="service picture">
+          <h4 class="service-card__title">Planting</h4>
+          <p class="service-card__description">Lorem Ipsum has been the industry</p>
+        </div>
+        <div class="service-card">
+          <img class="service-card__img" src="./assets/service-card-3.png" alt="service picture">
+          <h4 class="service-card__title">Lawn care</h4>
+          <p class="service-card__description">Lorem Ipsum has been the industry</p>
+        </div>
+        <div class="service-card">
+          <img class="service-card__img" src="./assets/service-card-4.png" alt="service picture">
+          <h4 class="service-card__title">Planting</h4>
+          <p class="service-card__description">Lorem Ipsum has been the industry</p>
+        </div>
+        <div class="service-card">
+          <img class="service-card__img" src="./assets/service-card-5.png" alt="service picture">
+          <h4 class="service-card__title">Garden care</h4>
+          <p class="service-card__description">Lorem Ipsum has been the industry</p>
+        </div>
+        <div class="service-card">
+          <img class="service-card__img" src="./assets/service-card-6.png" alt="service picture">
+          <h4 class="service-card__title">Planting</h4>
+          <p class="service-card__description">Lorem Ipsum has been the industry</p>
         </div>
       </div>
     </div>
