feat: add section prices

--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
         <nav class="menu">
           <ul class="menu__list">
             <li class="menu__item menu__item_active">
-              Home
+              <a class="menu__link" href="#">Home</a>
             </li>
             <li class="menu__item">
-              About us
+              <a class="menu__link" href="#">About us</a>
             </li>
             <li class="menu__item">
-              Service
+              <a class="menu__link" href="#">Service</a>
             </li>
             <li class="menu__item">
-              Price
+              <a class="menu__link" href="#">Price</a>
             </li>
             <li class="menu__item">
-              Contacts
+              <a class="menu__link" href="#">Contacts</a>
             </li>
           </ul>
         </nav>
@@ -129,6 +129,53 @@
           <img class="service-card__img" src="./assets/service-card-6.png" alt="service picture">
           <h4 class="service-card__title">Planting</h4>
           <p class="service-card__description">Lorem Ipsum has been the industry</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="prices">
+    <div class="container">
+      <div class="prices-inner">
+        <div class="prices-wrapper">
+          <h3 class="prices__title">Prices</h3>
+          <div class="prices-accourdion">
+            <details class="prices-accourdion__details">
+              <summary class="prices-accourdion__summary">Basics</summary>
+              <p class="prices-accourdion__description">
+                Release of Letraset sheets containing Lorem Ipsum passages, and more recently
+              </p>
+              <div class="prices-accourdion__price">
+                <span>$25</span> / per hour
+              </div>
+              <button class="prices-accourdion__btn">Order</button>
+            </details>
+            <details class="prices-accourdion__details">
+              <summary class="prices-accourdion__summary">Standard</summary>
+              <p class="prices-accourdion__description">
+                Release of Letraset sheets containing Lorem Ipsum passages, and more recently
+              </p>
+              <div class="prices-accourdion__price">
+                <span>$35</span> / per hour
+              </div>
+              <button class="prices-accourdion__btn">Order</button>
+            </details>
+            <details class="prices-accourdion__details">
+              <summary class="prices-accourdion__summary">Pro care</summary>
+              <p class="prices-accourdion__description">
+                Release of Letraset sheets containing Lorem Ipsum passages, and more recently
+              </p>
+              <div class="prices-accourdion__price">
+                <span>$15</span> / per hour
+              </div>
+              <button class="prices-accourdion__btn">Order</button>
+            </details>
+          </div>
+        </div>
+        <div class="prices-help">
+          <h4 class="prices-help__title">Our best <span class="prices-help__title_color_green">gardeners</span> are ready to help you</h4>
+          <a class="prices-link__contact" href="#">Contact us</a>
+          <img class="prices__img" src="./assets/prices-leafs.png" alt="leafs">
         </div>
       </div>
     </div>
