--- a/index.html
+++ b/index.html
@@ -102,32 +102,32 @@
       <div class="service-body">
         <div class="service-card">
           <img class="service-card__img" src="./assets/service-card-1.png" alt="service picture">
-          <h4 class="service-card__title">Garden care</h4>
+          <h5 class="service-card__title">Garden care</h5>
           <p class="service-card__description">Lorem Ipsum has been the industry</p>
         </div>
         <div class="service-card">
           <img class="service-card__img" src="./assets/service-card-2.png" alt="service picture">
-          <h4 class="service-card__title">Planting</h4>
+          <h5 class="service-card__title">Planting</h5>
           <p class="service-card__description">Lorem Ipsum has been the industry</p>
         </div>
         <div class="service-card">
           <img class="service-card__img" src="./assets/service-card-3.png" alt="service picture">
-          <h4 class="service-card__title">Lawn care</h4>
+          <h5 class="service-card__title">Lawn care</h5>
           <p class="service-card__description">Lorem Ipsum has been the industry</p>
         </div>
         <div class="service-card">
           <img class="service-card__img" src="./assets/service-card-4.png" alt="service picture">
-          <h4 class="service-card__title">Planting</h4>
+          <h5 class="service-card__title">Planting</h5>
           <p class="service-card__description">Lorem Ipsum has been the industry</p>
         </div>
         <div class="service-card">
           <img class="service-card__img" src="./assets/service-card-5.png" alt="service picture">
-          <h4 class="service-card__title">Garden care</h4>
+          <h5 class="service-card__title">Garden care</h5>
           <p class="service-card__description">Lorem Ipsum has been the industry</p>
         </div>
         <div class="service-card">
           <img class="service-card__img" src="./assets/service-card-6.png" alt="service picture">
-          <h4 class="service-card__title">Planting</h4>
+          <h5 class="service-card__title">Planting</h5>
           <p class="service-card__description">Lorem Ipsum has been the industry</p>
         </div>
       </div>
@@ -173,13 +173,89 @@
           </div>
         </div>
         <div class="prices-help">
-          <h4 class="prices-help__title">Our best <span class="prices-help__title_color_green">gardeners</span> are ready to help you</h4>
+          <h4 class="prices-help__title">Our best <span class="prices-help__title_color_green">gardeners</span> are
+            ready to help you</h4>
           <a class="prices-link__contact" href="#">Contact us</a>
           <img class="prices__img" src="./assets/prices-leafs.png" alt="leafs">
         </div>
       </div>
     </div>
   </section>
+
+  <section class="contact">
+    <div class="container">
+      <h3 class="contact__title">Contact us</h3>
+      <div class="contact-adress adress">
+        <div class="adress-inner">
+          <h5 class="adress-inner__title">City</h5>
+          <ul class="adress-inner__list">
+            <li class="adress-inner__item">Canandaigua, NY</li>
+            <li class="adress-inner__item">New York City</li>
+            <li class="adress-inner__item">Yonkers, NY</li>
+            <li class="adress-inner__item">Sherrill, NY</li>
+          </ul>
+        </div>
+
+          <div class="adress-card">
+            <dl class="adress-card__list">
+              <div class="adress-card__item">
+                <dt class="adress-card__title">City</dt>
+                <dd class="adress-card__value">Canandaigua, NY</dd>
+              </div>
+              <div class="adress-card__item">
+                <dt class="adress-card__title">Phone</dt>
+                <dd class="adress-card__value">+1 585 393 0001</dd>
+              </div>
+              <div class="adress-card__item">
+                <dt class="adress-card__title">Office adress</dt>
+                <dd class="adress-card__value">151 Charlotte Street</dd>
+              </div>
+            </dl>
+            <button class="adress-card__btn">Call us</button>
+          </div>
+      </div>
+      <img class="contact__img" src="./assets/contact-gardener.png" alt="gardener">
+    </div>
+  </section>
+
+  <footer class="footer">
+    <div class="container">
+      <div class="footer-inner">
+        <ul class="footer-info">
+          <li class="footer-info__item">&#169</li>
+          <li class="footer-info__item">2023</li>
+          <li class="footer-info__item">
+            <a class="footer-info__link" target="_blank" href="https://github.com/sinelamin?tab=repositories">github</a>
+          </li>
+        </ul>
+        <div class="footer-rss">
+          <a class="footer-rss__link" target="_blank" href="https://rs.school/">Rolling Scopes School</a>
+        </div>
+        <ul class="footer-social">
+          <li class="footer-social__item">
+            <a class="footer-social__link" target="_blank" href="instagram.com">
+              <img class="footer-social__img" src="./assets/inst.svg" alt="instagram">
+            </a>
+          </li>
+          <li class="footer-social__item">
+            <a class="footer-social__link" href="facebook.com">
+              <img class="footer-social__img" src="./assets/fb.svg" alt="facebook">
+            </a>
+          </li>
+          <li class="footer-social__item">
+            <a class="footer-social__link" href="twitter.com">
+              <img class="footer-social__img" src="./assets/tw.svg" alt="twitter">
+            </a>
+          </li>
+          <li class="footer-social__item">
+            <a class="footer-social__link" href="pinterest.com">
+              <img class="footer-social__img" src="./assets/pinterest.svg" alt="pinterest">
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </footer>
 
   <script src="./script.js">  </script>
 </body>
