refactor: ref section header, contact, footer

--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
         </nav>
       </div>
       <div class="welcome">
-        <img class="welcome__img" src="./assets/leafs.png" alt="leafs">
+        <div class="welcome-photo">
+          <img class="welcome__img" src="./assets/leafs.png" alt="leafs">
+        </div>
         <div class="welcome-content">
           <h1 class="welcome-content__title">
             We grow
