feat: add adaptive for 380px

--- a/index.html
+++ b/index.html
@@ -23,9 +23,15 @@
       <div class="header__inner">
         <a class="header-logo" href="#">
           <img class="header-logo__img" src="./assets/logo.svg" alt="plants-logo">
-          Plants
+          <p class="header-logo__text">Plants</p>
         </a>
         <nav class="menu">
+          <div class="menu-burger">
+            <span class="menu-burger__line"></span>
+            <span class="menu-burger__line"></span>
+            <span class="menu-burger__line"></span>
+            <span class="menu-burger__line"></span>
+          </div>
           <ul class="menu__list">
             <li class="menu__item menu__item_active">
               <a class="menu__link" href="#">Home</a>
