feat: add js for contact list and adress card

--- a/index.html
+++ b/index.html
@@ -198,30 +198,30 @@
         <div class="adress-inner">
           <h5 class="adress-inner__title">City</h5>
           <ul class="adress-inner__list">
-            <li class="adress-inner__item">Canandaigua, NY</li>
-            <li class="adress-inner__item">New York City</li>
-            <li class="adress-inner__item">Yonkers, NY</li>
-            <li class="adress-inner__item">Sherrill, NY</li>
+            <li class="adress-inner__item" data-city="canandaigua">Canandaigua, NY</li>
+            <li class="adress-inner__item" data-city="newYork">New York City</li>
+            <li class="adress-inner__item" data-city="yonkers">Yonkers, NY</li>
+            <li class="adress-inner__item" data-city="sherrill">Sherrill, NY</li>
           </ul>
         </div>
 
-          <div class="adress-card">
-            <dl class="adress-card__list">
-              <div class="adress-card__item">
-                <dt class="adress-card__title">City</dt>
-                <dd class="adress-card__value">Canandaigua, NY</dd>
-              </div>
-              <div class="adress-card__item">
-                <dt class="adress-card__title">Phone</dt>
-                <dd class="adress-card__value">+1 585 393 0001</dd>
-              </div>
-              <div class="adress-card__item">
-                <dt class="adress-card__title">Office adress</dt>
-                <dd class="adress-card__value">151 Charlotte Street</dd>
-              </div>
-            </dl>
-            <button class="adress-card__btn">Call us</button>
-          </div>
+        <div class="adress-card">
+          <dl class="adress-card__list">
+            <div class="adress-card__item">
+              <dt class="adress-card__title">City</dt>
+              <dd class="adress-card__value">Canandaigua, NY</dd>
+            </div>
+            <div class="adress-card__item">
+              <dt class="adress-card__title">Phone</dt>
+              <dd class="adress-card__value">+1 585 393 0001</dd>
+            </div>
+            <div class="adress-card__item">
+              <dt class="adress-card__title">Office adress</dt>
+              <dd class="adress-card__value">151 Charlotte Street</dd>
+            </div>
+          </dl>
+          <button class="adress-card__btn">Call us</button>
+        </div>
       </div>
       <img class="contact__img" src="./assets/contact-gardener.png" alt="gardener">
     </div>
